syntax = "proto3";

package authservice.config.oidc;

import "config/common/config.proto";

message OIDCConfig {
    common.Endpoint authorization = 1;
    common.Endpoint token = 2;
    common.Endpoint jwks_uri = 3;
    string jwks = 4;
    common.Endpoint callback = 5;
    string landing_page = 6;
    string client_id = 7;
    string client_secret = 8;
    string cryptor_secret = 9;
    repeated string scopes = 10;
}
